Folder and files to init project

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Falken
+credentials.yaml
+*.db
+# IDEs
+.eclipse/
+.idea/
+.vscode
+**/*.iml
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
