--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ requests
 gunicorn  # Neccesary for app.yaml
 pydantic # Neccesary for config.py
 pydantic-settings
-flask-sqlalchemy
+flask-sqlalchemy==2.5.1
 psycopg2-binary
 flask-login
 flask_swagger_ui
