--- a/.env.sample
+++ b/.env.sample
@@ -2,18 +2,12 @@ ENV_PRO = N
 LEVEL_LOG = ["DEBUG", "INFO", "WARNING", "ERROR"]
 SECRET_KEY = XXXX
 
-# To use hosting Supabase PostgreSQL DB
-DATABASE_URL=postgres://postgres:XXXXX
-
-# SQlite database data (only for local)
-DB_SQLITE_URL=sqlite://teleworking.db
-
 ##### Vars using new config.py file
 # Configuration mode => development, testing, staging, production
 CONFIG_MODE="development"
 
 # Database URL
-DEVELOPMENT_DATABASE_URL="sqlite://teleworking.db"
+DEVELOPMENT_DATABASE_URL="sqlite://database.db"
 TEST_DATABASE_URL=
 STAGING_DATABASE_URL=
 PRODUCTION_DATABASE_URL=postgres://postgres:XXXXXXXX
