Working with config params

--- a/.env.sample
+++ b/.env.sample
@@ -1,13 +1,13 @@
-ENV_PRO = N
-LEVEL_LOG = ["DEBUG", "INFO", "WARNING", "ERROR"]
-SECRET_KEY = XXXX
+ENV_PRO                     = N
+LEVEL_LOG                   = ["DEBUG", "INFO", "WARNING", "ERROR"]
+SECRET_KEY                  = "XXXXXXX"
 
 ##### Vars using new config.py file
 # Configuration mode => development, testing, staging, production
-CONFIG_MODE="development"
+CONFIG_MODE                 = "development"
 
 # Database URL
-DEVELOPMENT_DATABASE_URL="sqlite://database.db"
-TEST_DATABASE_URL=
-STAGING_DATABASE_URL=
-PRODUCTION_DATABASE_URL=postgres://postgres:XXXXXXXX
+DEVELOPMENT_DATABASE_URL    = "sqlite://database.db"
+TEST_DATABASE_URL           =
+STAGING_DATABASE_URL        =
+PRODUCTION_DATABASE_URL     = "postgres://postgres:XXXXXX"
