Config setup finished

--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,6 @@
 LEVEL_LOG                   = ["DEBUG", "INFO", "WARNING", "ERROR"]
 SECRET_KEY                  = "XXXXXXX"
-
-##### Vars using new config.py file
-# Configuration mode => development, testing, staging, production
-CONFIG_MODE                 = "development"
+CONFIG_MODE                 = "XXXXXXX" # Configuration mode => development, testing, staging, production
 
 # Database URL
 DEVELOPMENT_DATABASE_URL    = "sqlite://database.db"
