--- a/.env.sample
+++ b/.env.sample
@@ -4,6 +4,5 @@ CONFIG_MODE                 = "XXXXXXX" # Configuration mode => development, tes
 
 # Database URL
 DEVELOPMENT_DATABASE_URL    = "sqlite://database.db"
-TEST_DATABASE_URL           =
-STAGING_DATABASE_URL        =
+TESTING_DATABASE_URL        = "sqlite:///:memory:"
 PRODUCTION_DATABASE_URL     = "postgres://postgres:XXXXXX"
