Include Werzeug package 2.2.2

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,4 @@ flask-login
 flask_swagger_ui
 flask_validator # Validation for string, countries, etc.
 pyshorteners # URL shortener
+Werkzeug==2.2.2
