Fix packages version and center screens

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-Flask==2.1.3
+# Flask==2.1.3
+Flask==2.2
 python-dotenv
 rich>=11.2.0
 requests
 gunicorn  # Neccesary for app.yaml
 pydantic # Neccesary for config.py
 pydantic-settings
-flask-sqlalchemy==2.5.1
+# flask-sqlalchemy==2.5.1
+flask-sqlalchemy==3.0.2
 psycopg2-binary
 flask-login
 flask_swagger_ui
