--- a/app.yaml
+++ b/app.yaml
@@ -3,8 +3,8 @@ runtime: python310
 instance_class: F1
 
 # entrypoint is not neccesary because search for main.py in root with object app 
-# entrypoint: gunicorn -b:$PORT falken_teleworking.main:app 
-entrypoint: gunicorn -b:$PORT 'falken_plants.app:create_app()' # Beacause now is in the __init__.py file (https://docs.gunicorn.org/en/stable/run.html)
+# entrypoint: gunicorn -b:$PORT falken_teleworking.main:app (https://docs.gunicorn.org/en/stable/run.html)
+entrypoint: gunicorn -b:$PORT 'falken_plants.app:create_app()'
 # No incluyas gunicorn en requirements.txt, a menos que especifiques el entrypoint
 
 env_variables:
